[BZ #14686, #15336] Fix standard compliance.  Don't use hard-coded qNaN values.